# ToxTempAssistant

./: .dockerignore  .env.dummy  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  THIRD_PARTY.md  backup.sh  docker-compose.yml  docker-stack.yml  implementation_plan.md  pyproject.toml  ragas_faithfulness_implementation_plan.md  requirements.txt
.deepeval/: .deepeval_telemetry.txt
.github/scripts/: deploy_readiness_probe.py
.github/workflows/: ci.yml  cleanup.yml  deploy.yml  inspectrunner  main.yml  publish-image.yml  release.yml
docs/: swarm-deployment.md
myocyte/: .gitignore  2  README.md  ToxTemp.json  ToxTemp_v1.json  ToxTemp_v2.json  ToxTemp_v2_colour.json  ToxTemp_v3_gpt-4o-mini_temp0_best_context.json  ToxTemp_v3_gpt-4o-mini_temp0_context.json  db.sqlite3.prelimtests  diff_output.html  django_startup.sh  docker-compose.yml  groundedness_demo_output.csv  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  word_level_diff.html
myocyte/.deepeval/: .deepeval_telemetry.txt
myocyte/dockerfiles/backup-scheduler/: Dockerfile  entrypoint.sh
myocyte/dockerfiles/djangoapp/: Dockerfile
myocyte/dockerfiles/minio/: Dockerfile  init.sh
myocyte/dockerfiles/nginx/: Dockerfile  nginx.conf
myocyte/dockerfiles/nginx/error_pages/: 400.html  401.html  403.html  404.html  500.html
myocyte/myocyte/: asgi.py  settings.py  urls.py  wsgi.py
myocyte/scss/: theme.scss
myocyte/toxtass/: export.py
myocyte/toxtempass/: __init__.py  admin.py  apps.py  azure_registry.py  context_processors.py  demo.py  export.py  filehandling.py  fileops.py  forms.py  llm.py  models.py  requirements.txt  signals.py  tables.py  tasks.py  tests.py  utilities.py  views.py  widgets.py  workspace.py
myocyte/toxtempass/evaluation/: README.md  config.py  run_evals.py  utils.py
myocyte/toxtempass/evaluation/data_analysis_plotting/: ncontrol_summary.py  neg_summary.py  pcontrol_summary.py  pooled_summary.py  pos_qual_scores.py  pos_summary.py  pos_summary_common_subset.py  pos_summary_quality_adjusted.py  tier1_cossim_dist_plotting.py  tier1_cossim_dist_plotting_combined.py
myocyte/toxtempass/evaluation/gold_standard/: README.md  __init__.py  audit.py  bakeoff.py  edit_analysis.py  edit_report.py  enrich.py  status_table.py
myocyte/toxtempass/evaluation/negative_control/: ncontrol.py  validation_pipeline_tier2.py
myocyte/toxtempass/evaluation/positive_control/: pcontrol.py  validation_pipeline_tier1.py
myocyte/toxtempass/evaluation/post_processing/: Faithfulness.py  answer_relevancy_ragas.py  cosine_similarities.py  demo.py  demo_input.csv  embeddings.py  faithfulness_ragas.py  faithfulness_template.py  groundedness.ipynb  groundedness.py  pairwise_cosine_similarities.py  similarity.py  utils.py  validation_set.csv
myocyte/toxtempass/evaluation/pre_evaluation/: answer_quality_scorer.py
myocyte/toxtempass/evaluation/real_world/: answer_utils.py  build_embeddings.py  calibrate_faithfulness_judge.py  calibrate_relevancy_judge.py  data_quality.py  enrich_answer_status.py  real_world.py  tier3_metrics.py
myocyte/toxtempass/fixtures/: factories.py
myocyte/toxtempass/migrations/: 0001_initial.py  0002_alter_person_managers_alter_person_orcid_id.py  0002_answer_accepted_historicalanswer_accepted.py  0002_feedback.py  0002_historicalanswer.py  0002_person_organization_alter_person_email.py  0003_answer_answer_documents_and_more.py  0003_feedback_usefulness_rating.py  0003_investigation_owner.py  0004_alter_answer_answer_documents_and_more.py  0004_alter_assay_description.py  0004_assay_status.py  0005_create_questionset_nullable.py  0005_person_has_accepted_tos.py  0006_backfill_initial_questionset.py  0007_make_questionset_and_section_non_nullable.py  0008_question_additional_llm_instruction_and_more.py  0009_alter_questionset_options.py  0010_assay_question_set.py  0011_alter_assay_question_set.py  0012_alter_questionset_created_by.py  0012_question_only_additional_llm_instruction.py  0013_questionset_is_visible.py  0014_assay_status_context_and_more.py  0015_person_preferences.py  0016_assayview.py  0017_assay_demo_fields.py  0018_answer_evidence.py  0018_assay_share_files_for_development.py  0018_fileasset_answerfile_answer_files_and_more.py  0019_filedownloadlog_historicalfiledownloadlog.py  0019_rename_evidence_to_context.py  0020_add_groups.py  0020_assay_description_file.py  0020_group_groupassay_groupmember.py  0020_workspace_workspaceinvestigation_workspacemember.py  0021_assay_created_by_study_created_by.py  0022_remove_orphaned_files_schedule.py  0023_llmconfig.py  0024_remove_llmconfig_default_endpoint_index_and_more.py  (+17 more)
myocyte/toxtempass/prompts/: FAITHFULNESS_IMPLEMENTATION.md  PROMPT_IMPROVEMENTS.md  README.md  SUMMARY.md  __init__.py  utils.py
myocyte/toxtempass/templatetags/: extras.py
myocyte/toxtempass/tests/: test_add_status_context.py  test_admin_beta.py  test_answer_sidebar.py  test_assay_cost.py  test_assay_time_sync.py  test_beta_signup.py  test_citation_rendering.py  test_context_window.py  test_create_isa.py  test_demo_seed.py  test_documentdictfactory.py  test_export_errors.py  test_export_metadata.py  test_export_security.py  test_fair_export.py  test_file_storage_consent.py  test_file_uploads.py  test_filehandling_from_docdict.py  test_filehandling_images.py  test_filehandling_tabular.py  test_gold_standard_edit_analysis.py  test_investigationpermission.py  test_log_processing_event.py  test_orphaned_file_cleanup.py  test_pairwise_cosine_vectors.py  test_parse_answer_status.py  test_password_reset.py  test_person.py  test_process_llm_assay_deleted.py  test_process_llm_async.py  test_process_llm_ratelimit.py  test_riskhunt3r_progress.py  test_sidebar_statuses.py  test_signup_organization.py  test_suggestion_round.py  test_tables.py  test_workspace.py
myocyte/toxtempass/tools/: __init__.py  prompts.py
myocyte/toxtempass/validation/: answer_quality_scorer.py  embeddings.py  utils.py  validation_pipeline.py  validation_pipeline_tier1.py  validation_pipeline_tier2.py
(+186 files in other folders)
