[project]
name = "toxtempassistant"
version = "2.14.0"
description = "LLM-based web-app to assist users in drafting ToxTemp, a template for describing in-vitro toxicity test methods in compliance with GD211."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Jente Houweling", email = "Jente.Houweling@rivm.nl" },
    { name = "Matthias Arras", email = "Matthias.Arras@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Toxicology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Biology",
    "Topic :: Scientific/Engineering :: Laboratory Information Management",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: POSIX :: Linux",
    "Environment :: Docker",
]

dependencies = [
    "gunicorn>=25.0.0,<26.0.0",
    "django>=6.0.0,<7.0.0",
    "django-bootstrap5>=26.1,<27.0",
    "django-extensions>=4.1,<5.0",
    "django-guardian>=3.0.3,<4.0.0",
    "django-simple-history>=3.10.1,<4.0.0",
    "django-q2>=1.8.0,<2.0.0",
    "django-tables2>=2.7.5,<3.0.0",
    "aiohappyeyeballs>=2.6.1,<3.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "aiosignal>=1.4.0,<2.0.0",
    "annotated-types>=0.7.0,<0.8.0",
    "anyio>=4.9.0,<5.0.0",
    "asgiref>=3.9.1,<4.0.0",
    "attrs>=25.3.0,<26.0.0",
    "certifi>=2026.0.0",
    "charset-normalizer>=3.4.2,<4.0.0",
    "distro>=1.9.0,<2.0.0",
    "dotenv>=0.9.9,<0.10.0",
    "frozenlist>=1.7.0,<2.0.0",
    "h11>=0.16.0,<0.17.0",
    "httpcore>=1.0.9,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "httpx-sse>=0.4.1,<0.5.0",
    "idna>=3.10,<4.0",
    "iniconfig>=2.1.0,<3.0.0",
    "jiter>=0.13.0,<1.0.0",
    "jsonpatch>=1.33,<2.0",
    "jsonpointer>=3.0.0,<4.0.0",
    "langchain-community>=0.3.27,<1.0.0",
    "langchain-core>=0.3.72,<2.0.0",
    "langchain-openai>=0.3.28,<2.0.0",
    "langchain-text-splitters>=0.3.9,<2.0.0",
    "langsmith>=0.4.8,<1.0.0",
    "multidict>=6.6.3,<7.0.0",
    "mypy-extensions>=1.1.0,<2.0.0",
    "openai>=2.0.0,<3.0.0",
    "openpyxl>=3.1.3,<4.0.0",
    "orjson>=3.11.1,<4.0.0",
    "packaging>=26.0,<27.0",
    "pillow>=12.0.0,<13.0.0",
    "pluggy>=1.6.0,<2.0.0",
    "propcache>=0.3.2,<1.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pydantic-core>=2.37.2,<3.0.0",
    "pypdf>=6.0.0,<7.0.0",
    "requests>=2.32.4,<3.0.0",
    "requests-toolbelt>=1.0.0,<2.0.0",
    "setuptools>=80.9.0",
    "sniffio>=1.3.1,<2.0.0",
    "sqlalchemy>=2.0.42,<3.0.0",
    "sqlparse>=0.5.3,<0.6.0",
    "tenacity>=9.1.2,<10.0.0",
    "tiktoken>=0.9.0,<1.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "typing-inspect>=0.9.0,<0.10.0",
    "tzdata>=2025.2,<2026.0",
    "unstructured[docx]>=0.18.11,<1.0.0",
    "urllib3>=2.5.0,<3.0.0",
    "wheel>=0.45.1,<1.0.0",
    "yarl>=1.20.1,<2.0.0",
    "zstandard>=0.23.0,<1.0.0",
    "django-storages[s3] (>=1.14.6,<2.0.0)",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest= ">=8.4.1,<9.0.0"
pytest-django=">=4.11.1,<5.0.0"
pytest-factoryboy=">=2.8.1,<3.0.0"
factory-boy=">=3.3.3,<4.0.0"
Faker=">=37.4.2,<38.0.0"
python-dotenv=">=1.1.1,<2.0.0"
pyyaml= ">=6.0.2,<7.0.0"
regex=">=2025.7.31"
pytest-cov=">=4.0.0,<5.0.0"
python-semantic-release = {version=">=10.2.0,<11.0.0", extras=["git"]}
pre-commit=">=4.2.0,<5.0.0"
ruff=">=0.12.7,<1.0.0"
commitizen=">=4.8.3,<5.0.0"
detect-secrets=">=1.5.0,<2.0.0"
jupyter=">=1.1.1"

[tool.poetry.group.eval]
optional = true

[tool.poetry.group.eval.dependencies]
bert-score=">=0.3.13,<1.0.0"


[project.urls]
homepage = "https://toxtempassistant.vhp4safety.nl"
repository = "https://github.com/johannehouweling/ToxTempAssistant"
documentation = "https://toxtempassistant.vhp4safety.nl/docs"

[tool.poetry]
package-mode = false


[tool.semantic_release]
version_source = "commit"
branch = "main"
update_changelog = true
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "manage.py",
]
extend-exclude =["*/validation/*", "*/migrations/*"]

# Same as Black.
line-length = 90
indent-width = 4
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S","D","ANN"]
"*/fixtures/*" = ["S","D","ANN"]


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "W", "T", "ANN", "D", "DJ", "I", "S"]
ignore = ["ANN002", "ANN003", "ANN204", "D100", "D101", "D104", "D106", "D203", "D213"]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.e.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# tells pytest-django where to find your settings
DJANGO_SETTINGS_MODULE = "toxtempass.myocyte.settings"
# which test file patterns to collect
python_files = ["tests.py", "test_*.py", "*_tests.py"]
